--- a/css/company_event.css
+++ b/css/company_event.css
@@ -8,8 +8,41 @@
 /*dit is het blokje met adres en contact*/
 .company_info {}
 
-/*dit is de h3 met de verschillende sub-onderwerpjes*/
-.company_accordeon {}
+/*dit is de accordion titel voor de verschillende sub-onderwerpjes*/
+.accordion {}
+
+/*dit komt in de accordion, het opgevouwen gedeelte zeg maar*/
+.panel {}
+
+/*hartje*/
+.subscribe_button {}
+
+/*---------------- alles voor accordionmenu, via w3schools ----------*/
+
+ /* Style the buttons that are used to open and close the accordion panel */
+button.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+button.accordion.active, button.accordion:hover {
+    background-color: #ddd;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+div.panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+} 
 
 
 
@@ -29,5 +62,10 @@
 /*beschrijvend tekstje over het event*/
 .event_description {}
 
-/*dit is een accordeonmenu zoals bij de company profile, samen stijlen?*/
+/*dit is een accordeonmenu met h3s zoals bij de company profile, samen stijlen?*/
 .event_accordeon {}
+
+
+
+
+
