--- a/css/profiel.css
+++ b/css/profiel.css
@@ -2,6 +2,7 @@ body{margin:0;
 }
 
 .hoofddingProfiel{
+    color:white;
     background-color:blue;
     text-align: center;
 }
@@ -11,6 +12,7 @@ body{margin:0;
 }
 
 .linksProfiel ul{
+    padding:0;
     list-style: none;
 }
 
@@ -19,5 +21,7 @@ body{margin:0;
 }
 
 #naam{
+    margin:0;
+    color:grey;
     text-align: center;
 }
