--- a/css/company_event.css
+++ b/css/company_event.css
@@ -42,6 +42,9 @@ div.panel {
     padding: 0 18px;
     background-color: white;
     display: none;
+   max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
 } 
 
 
