--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,22 @@
 body {
     font-family: sans-serif;
 }
+
+.nav {
+    text-align: center;
+}
+
+.nav ul {
+    padding: 0;
+    list-style: none;
+}
+
+.nav ul li {
+    margin: 0% 10% 0% 10%;
+    display: inline-block;
+}
+
+.nav ul li img {
+    width: 40px;
+    height: 40px;
+}
