--- a/css/profiel.css
+++ b/css/profiel.css
@@ -1,4 +1,5 @@
 body{margin:0;
+    padding:0;
 }
 
 .hoofddingProfiel{
@@ -12,12 +13,15 @@ body{margin:0;
     width:100%;
 }
 
-.profielFoto h1{
-    text-align: center;
-    position: absolute;
-    padding-top:60%;
+#naam{position: absolute;
+    width:100%;
+    padding-top:50%;
     top:0;
+    margin:0;
+    color:white;
+    text-align: center;
 }
+
 
 .linksProfiel ul{
     padding:0;
@@ -32,9 +36,5 @@ hr{
     width:70%;
 }
 
-#naam{
-    margin:0;
-    color:white;
-    text-align: center;
-}
+
 
