--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,11 @@ body {
 }
 
 .nav {
-    background-color:lightgreen;
+    background-color: lightgreen;
     text-align: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
 }
 
 .nav ul {
