--- a/css/home.css
+++ b/css/home.css
@@ -12,6 +12,7 @@
     margin-top: 10px;
     color: white;
     padding-bottom: 10px;
+    font-size: 2em;
 }
 
 .topofnav {
@@ -21,4 +22,5 @@
 
 .topofnav nav ul li {
     margin-top: 10px;
+    display: inline-block;
 }
