--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
-    font-family: sans-serif;
     overflow-x: hidden;
     padding-bottom: 40px;
+    font-family: "Open Sans", Verdana, Tahoma, sans-serif;
 }
 
 .nav {
