--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,16 @@ body {
     font-weight: 300;
 }
 
+h1 {
+    font-family: "Open Sans", Verdana, Tahoma, sans-serif;
+    font-weight: 300;
+}
+
+h2 {
+    font-family: "Open Sans", Verdana, Tahoma, sans-serif;
+    font-weight: 300;
+}
+
 .nav {
     background: linear-gradient(red, yellow);
     text-align: center;
@@ -30,5 +40,6 @@ body {
 
 header {
     height: 50px;
-    color: dodgerblue;
+    background-color: dodgerblue;
+    color: white;
 }
