--- a/css/profiel.css
+++ b/css/profiel.css
@@ -3,6 +3,7 @@ body{margin:0;
 }
 
 .hoofddingProfiel{
+    
     color:white;
     background-color:blue;
     text-align: center;
@@ -15,7 +16,7 @@ body{margin:0;
 
 #naam{position: absolute;
     width:100%;
-    padding-top:50%;
+    padding-top:60%;
     top:0;
     margin:0;
     color:white;
@@ -24,11 +25,18 @@ body{margin:0;
 
 
 .linksProfiel ul{
+    margin-top:5%;
     padding:0;
     list-style: none;
 }
 
+.linksProfiel ul a{
+    text-decoration: none;
+    color:black;
+}
+
 .linksProfiel ul li{
+    margin:3% 0% 3% 0%;
     text-align: center;
 }
 
