--- a/css/company_event.css
+++ b/css/company_event.css
@@ -80,8 +80,8 @@
 /* Style the buttons that are used to open and close the accordion panel */
 
 button.accordion {
-  background-color: #eee;
-  color: #444;
+  background-color: white;
+  color: #000;
   cursor: pointer;
   padding: 18px;
   width: 100%;
@@ -105,5 +105,8 @@ button.accordion:hover {
 div.panel {
   padding: 0 18px;
   background-color: white;
-  display: none;
+/*  display: none;*/
+  max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
 }
