--- a/css/profielLogIn.css
+++ b/css/profielLogIn.css
@@ -2,14 +2,28 @@ body{margin:0;
 }
 
 .hoofddingLogin{
-    background-color:blue;
     color:white;
     text-align: center;
     
 }
 
 .loginGegevens{
+    margin-top:5%;
     text-align: center;
+}
+
+.loginGegevens p{
+    margin-top:5%;
+}
+
+.loginGegevens input{
+    width:80%;
+    border-top: none;
+    border-left:none;
+    border-right:none;
+    border-bottom-color: black;
+    border-bottom-width: thin;
+margin-top:0%;
 }
 
 #foto{
@@ -35,8 +49,14 @@ body{margin:0;
 }
 
 
-p{
+#registerHere{
+    margin-top:5%;
     text-align: center;
+}
+
+#registerHere a{
+    text-decoration: none;
+    color: deeppink;
 }
 
 .loginHolder{
