--- a/css/profielLogIn.css
+++ b/css/profielLogIn.css
@@ -23,7 +23,7 @@ body{margin:0;
     border-right:none;
     border-bottom-color: black;
     border-bottom-width: thin;
-margin-top:0%;
+    height:5px;
 }
 
 #foto{
@@ -56,9 +56,24 @@ margin-top:0%;
 
 #registerHere a{
     text-decoration: none;
-    color: deeppink;
+    color: dodgerblue;
+}
+
+#registerHere a:hover{
+    text-decoration: underline;
+    color: dodgerblue;
 }
 
 .loginHolder{
     text-align: center;
+}
+
+#logIn{
+    padding-left:5%;
+    padding-right:5%;
+    border:1px;
+    border-color: black;
+    background-color:dodgerblue;
+    color:white;
+
 }
