--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ h2 {
 }
 
 .nav {
-    background: linear-gradient(red, yellow);
+    border-top: 1px solid lightgrey;
+    background: white;
     text-align: center;
     position: fixed;
     width: 100%;
@@ -29,13 +30,15 @@ h2 {
 }
 
 .nav ul li {
-    margin: 0% 10% 0% 10%;
+    margin: 0% 5% 0% 5%;
     display: inline-block;
 }
 
 .nav ul li img {
-    width: 40px;
-    height: 40px;
+    color:green;
+    margin-top:2px;
+    width: 38px;
+    height: 38px;
 }
 
 
