--- a/css/company_event.css
+++ b/css/company_event.css
@@ -12,21 +12,22 @@ a {
 }
 
 
-/*dit is de h1 met naam van het initiatief*/
+/*dit is de h1 met naam van het initiatief en foto --- NOG AANPASSEN!!! */
 
-#naam{position: absolute;
-    width:100%;
-    padding-top:60%;
-    top:0;
-    margin:0;
-    color:white;
-    text-align: center;
+#naam {
+  position: absolute;
+  width: 80;
+  padding-top: 60%;
+  top: 0;
+  margin: 0;
+  color: white;
+  text-align: center;
 }
 
 
-/*dit is het icoontje wat terug naar de map leidt*/
+/*dit is het icoontje wat terug naar de map/calendar leidt*/
 
-.location_link {
+.location_link, .calendar_link {
   text-decoration: none;
   float: left;
   display: inline;
@@ -42,19 +43,24 @@ a {
   display: block;
   font-size: 0.8em;
   line-height: 0.9;
-/*  margin: 0em 0.8em;*/
+  /*  margin: 0em 0.8em;*/
   width: 50%;
 }
 
 
 /*dit is de sectie met hartje en aantal subscribers*/
 
+
+/*LET OP met js nog rand van hartje invullen*/
+
 .connect_users {
   line-height: 0.6;
   display: inline-block;
-/*  margin: 0em 2em;*/
-  padding: 1.2em 0em;
-  width: 30%;
+  /*  margin: 0em 2em;*/
+  /*  padding: 1.2em 0em;*/
+  width: 35%;
+  margin-right: 0;
+  text-align: center;
 }
 
 
@@ -71,6 +77,7 @@ a {
 /*hartje*/
 
 .subscribe_button {
+  color: bisque;
   text-decoration: none;
 }
 
@@ -78,9 +85,12 @@ a {
   color: red;
 }
 
+
+/*
 .subscribe_button:link {
   color: red;
 }
+*/
 
 .subscribe_button:visited {
   color: red;
@@ -123,7 +133,10 @@ a {
 
 /*Ook hier een .company info en daar zit een aparte p in met de naam van het initiatief*/
 
-.company_name_event {font-weight: bold; line-height: 0.9;}
+.company_name_event {
+  font-weight: bold;
+  line-height: 0.9;
+}
 
 
 /*de datum en tijd zitten in*/
@@ -131,6 +144,8 @@ a {
 .event_date {
   float: none;
   clear: left;
+  line-height: 0.7;
+  padding: 1.2em 0em 0em;
 }
 
 
@@ -144,8 +159,10 @@ a {
 
 /*---------------- 3. alles voor accordionmenu, via w3schools ----------*/
 
+.content_accordion {
+  margin-bottom: 10%;
+}
 
-.content_accordion{margin-bottom: 10%;}
 
 /* Style the buttons that are used to open and close the accordion panel */
 
