--- a/css/company_event.css
+++ b/css/company_event.css
@@ -27,7 +27,8 @@ a {
 
 /*dit is het icoontje wat terug naar de map/calendar leidt*/
 
-.location_link, .calendar_link {
+.location_link,
+.calendar_link {
   text-decoration: none;
   float: left;
   display: inline;
@@ -154,6 +155,7 @@ a {
 .event_description {
   font-size: 0.8em;
   padding: 1.2em 0em;
+  clear: both;
 }
 
 
@@ -179,6 +181,11 @@ button.accordion {
   transition: 0.4s;
 }
 
+.accordion_arrow {
+  position: absolute;
+  right: 8px;
+}
+
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 
@@ -197,4 +204,19 @@ div.panel {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
+}
+
+
+/*pijltjes*/
+
+button.accordion:after {
+    content: '\25BC';
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 8px;
+}
+
+button.accordion.active:after {
+    content: "\25B2"; /* Unicode character for "minus" sign (-) */
 }
