--- a/css/kalender.css
+++ b/css/kalender.css
@@ -1,27 +1,25 @@
-.jaqueslogo {
-    background-color: aqua;
-    width: 200px;
-    height: 100px;
-    display: block;
-    margin: 0 auto;
-    margin-top: 10px;
-}
 
-.topofnav h1 {
+#calendar-container{
+    padding: 10px;
+    width: 210px;
+    height: 240px;
     text-align: center;
-    margin-top: 10px;
-    color: white;
-    padding-bottom: 10px;
-    font-size: 2em;
+    border: 1px solid #eee;
+    border-radius: 10px;
+    font-size: 16px;
+    font-family: Arial;
+    background-image: linear-gradient(#fff, #d3d3d3);
 }
 
-.topofnav {
-    background-color: dodgerblue;
-    padding-top: 10px;
+#calendar-container>div{
+    padding: 0;
+    margin-bottom: 10px;
 }
 
-.topofnav nav ul li {
-    margin-top: 10px;
-    display: inline-block;
-    color: white;
+#calendar-month-year{
+    margin: 5px;
+}
+
+#calendar-dates>table>tr>td{
+    padding: 5px;
 }
