--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ h2 {
     position: fixed;
     width: 100%;
     bottom: 0;
+    padding-bottom: 8px;
+    padding-top: 8px
 }
 
 .nav ul {
@@ -35,15 +37,14 @@ h2 {
 }
 
 .nav ul li img {
-    color:green;
-    margin-top:2px;
+    color: green;
+    margin-top: 2px;
     width: 38px;
     height: 38px;
 }
 
-
-header{
-    height:auto;
+header {
+    height: auto;
     padding: 4% 0% 4% 0%;
     background-color: dodgerblue;
     color: white;
