--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ h2 {
 
 header {
     height: auto;
-    padding: 4% 0% 4% 0%;
+    padding: 2% 0%;
     background-color: dodgerblue;
     color: white;
 }
