--- a/css/company_event.css
+++ b/css/company_event.css
@@ -26,10 +26,9 @@ input[type=button] {
   background-color: dodgerblue;
   border: none;
   color: white;
-  padding: 6%;
+  padding: 0.5em 0;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 1.5em;
   float: left;
 }
@@ -126,7 +125,6 @@ a {
   color: red;
 }
 
-
 .subscribe_button:visited {
   color: red;
 }
@@ -173,7 +171,6 @@ a {
 
 
 /* ------ 2. EVENT: ------------*/
-
 
 
 /*Ook hier een .company info en daar zit een aparte p in met de naam van het initiatief*/
