--- a/css/company_event.css
+++ b/css/company_event.css
@@ -87,15 +87,12 @@ a {
 
 .connect_users,
 .attend_link {
-  /*  line-height: 0.6;*/
   display: inline-block;
-  /*  margin: 0em 2em;*/
-  /*  padding: 1.2em 0em;*/
   width: 20%;
   display: inline;
   margin-right: 0;
   text-align: center;
-  padding: 1.5em 0;
+  padding: 0 0 1em 0;
 }
 
 .attend_link {
@@ -120,6 +117,7 @@ a {
   color: bisque;
   text-decoration: none;
 }
+
 
 /*
 .subscribe_button:hover {
