--- a/css/calendar.css
+++ b/css/calendar.css
@@ -3,20 +3,10 @@ body {
 
 }
 
-.prev {
-  float: left;
-  color: white;
-}
-
-.next {
-    float: right;
-    color: white;
-
-}
 
 .Top View
 ,.top-view {
-  background: url(https://unsplash.it/1080/720/?random) no-repeat;
+  background: url(../img/Placeholder.jpg) no-repeat;
   background-size: cover;
   color: white;
 }
@@ -48,13 +38,15 @@ body {
   border-radius: 50%;
   width: 40px;
   height: auto;
-    }
+}
   
 .main {
     display: block;
     height: 100%;
     width: 100%;
     position: relative;
+    bottom: 20px;
+
   
 }
 
@@ -64,21 +56,61 @@ body {
   position: absolute;
   width: calc(100% - 40px);
   padding: 10px 0;
-  bottom: 20px;
+  bottom: 1px;
   box-sizing: border-box;
-    }
+}
 
+.prev {
+  float: left;
+  font-size: 25px;
+  color: white;
+}
+
+.next {
+    float: right;
+    font-size: 25px;
+    color: white;
+
+}
 span.month {
-     color: white;
+    color: white;
     text-transform: uppercase;
-    font-weight: 300;
-    letter-spacing: 2px;
-    font-size: 14px;
+    letter-spacing: 5px;
+    font-size: 25px;
   
 }
 
 
 
+
+.days-arrows{
+    padding-bottom: 23px;
+}
+.prev-day{
+    float: left;
+    margin-left: 10px;
+    font-size: 20px;
+    color: white;
+    background-color: black;
+    padding: 8px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.next-day{
+    float: right;
+    margin-right: 10px;
+    font-size: 20px;
+    color: white;
+    background-color: black;
+    padding: 8px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+
+}
 
 
 #active{
@@ -86,6 +118,17 @@ span.month {
     padding-top: 12px;
     border-radius: 50px;
     
+}
+
+.day:hover{
+    background-color: rgba(0, 0, 0, 0.2);
+    padding-top: 12px;
+    border-radius: 50px;
+}
+.day-name:hover{
+      background-color: rgba(0, 0, 0, 0.2);
+    padding-top: 12px;
+    border-radius: 50px;
 }
 .week-container{
       padding-top: 1px;
