--- a/css/calendar.css
+++ b/css/calendar.css
@@ -17,7 +17,7 @@ body {
     
 }
 .color-layer {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.3);
   height: 100%;
   width: 100%;
   padding: 20px 20px 0 20px;
@@ -30,6 +30,7 @@ body {
 .profile-container {
   width: 100px;
   height: 100px;
+  bottom: 20px;
   margin: 30px auto;
   position: relative;
 }
@@ -45,7 +46,6 @@ body {
     height: 100%;
     width: 100%;
     position: relative;
-    bottom: 20px;
 
   
 }
@@ -55,7 +55,6 @@ body {
   text-align: center;
   position: absolute;
   width: calc(100% - 40px);
-  padding: 10px 0;
   bottom: 1px;
   box-sizing: border-box;
 }
@@ -64,15 +63,27 @@ body {
   float: left;
   font-size: 25px;
   color: white;
+  padding: 8px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .next {
     float: right;
     font-size: 25px;
-    color: white;
+    color: white; 
+    padding: 8px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    
 
 }
 span.month {
+    text-align: center;
     color: white;
     text-transform: uppercase;
     letter-spacing: 5px;
@@ -86,12 +97,16 @@ span.month {
 .days-arrows{
     padding-bottom: 23px;
 }
+
+a:hover{
+    background-color: black;
+}
 .prev-day{
     float: left;
     margin-left: 10px;
     font-size: 20px;
     color: white;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.2);;
     padding: 8px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
@@ -103,7 +118,7 @@ span.month {
     margin-right: 10px;
     font-size: 20px;
     color: white;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.2);;
     padding: 8px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
