--- a/css/SearchPage.css
+++ b/css/SearchPage.css
@@ -16,8 +16,7 @@ input {
 
 .SliderImg h3 {
   background-color: rgba(97, 88, 186, 1);
-  padding: 0.4em 0em;
-  width: 250px;
+  width: 215px;
   top: -10;
 }
 
@@ -47,8 +46,7 @@ section li:first-child {
 }
 
 section ul {
-  margin-top: 2em;
-  margin: 2em 2em;
+  margin: 0em 2em;
   overflow: hidden;
 }
 
@@ -94,11 +92,10 @@ span.before {
 
 side button {
   width: 100%;
-  background-color: dodgerblue;
+  background-color: #2980b9;
   border: none;
   color: white;
-  padding: 1.2em;
-  margin: 0;
+  margin: 0em 0em;
   left: 0;
 }
 
@@ -126,19 +123,17 @@ h3.Search {
 }
 
 button {
-  width: 70%;
-  margin-left: 15%;
-  background-color: dodgerblue;
+  width: 43%;
+  background-color: #2980b9;
   border: none;
   color: white;
-  padding: 1em;
-  margin-bottom: 2em;
+  padding: 1.5em 0em;
+  margin: 2em 30% 5em;
 }
 
 header {
   height: auto;
   padding: 4% 0% 4% 0%;
-  background-color: dodgerblue;
   color: white;
 }
 
