--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,67 @@
 body {
-    overflow-x: hidden;
-    padding-bottom: 40px;
-    font-family: "Open Sans", Verdana, Tahoma, sans-serif;
-    font-weight: 300;
+  overflow-x: hidden;
+  padding-bottom: 40px;
+  font-family: "Open Sans", Verdana, Tahoma, sans-serif;
+  font-weight: 300;
 }
 
 h1 {
-    font-family: "Open Sans", Verdana, Tahoma, sans-serif;
-    font-weight: 300;
+  font-family: "Open Sans", Verdana, Tahoma, sans-serif;
+  font-weight: 300;
+  font-size: 1.8em;
+  padding: 0.5em 0.5em;
 }
 
 h2 {
-    font-family: "Open Sans", Verdana, Tahoma, sans-serif;
-    font-weight: 300;
-  margin: 0;
+  font-family: "Open Sans", Verdana, Tahoma, sans-serif;
+  font-weight: 300;
   padding: 0.5em 2em;
   text-align: center;
+  font-size: 1.3em;
+}
+
+h3 {
+  font-family: "Open Sans", Verdana, Tahoma, sans-serif;
+  font-weight: 300;
+  padding: 0.5em 0.5em;
+  font-size: 1em;
+}
+
+p {
+  font-size: 0.8em;
 }
 
 .nav {
-    border-top: 1px solid lightgrey;
-    background: white;
-    text-align: center;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    padding-bottom: 8px;
-    padding-top: 8px
+  border-top: 1px solid lightgrey;
+  background: white;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  padding-bottom: 8px;
+  padding-top: 8px
 }
 
 .nav ul {
-    padding: 0;
-    list-style: none;
+  padding: 0;
+  list-style: none;
 }
 
 .nav ul li {
-    margin: 0% 5% 0% 5%;
-    display: inline-block;
+  margin: 0% 5% 0% 5%;
+  display: inline-block;
 }
 
 .nav ul li img {
-    color: green;
-    margin-top: 2px;
-    width: 38px;
-    height: 38px;
+  color: green;
+  margin-top: 2px;
+  width: 38px;
+  height: 38px;
 }
 
 header {
-    height: auto;
-/*    padding: 2% 0%;*/
-    background-color: dodgerblue;
-    color: white;
+  height: auto;
+  /*    padding: 2% 0%;*/
+  background-color: #2980b9;
+  color: white;
 }
