--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,212 +1,207 @@
 body {
-  font-family: sans-serif;
-
+    margin: 0%;
+    font-family: sans-serif;
 }
 
+html {
+    margin: 0;
+    padding: 0;
+    width: auto;
+}
 
-.Top View
-,.top-view {
-  background: url(../img/Placeholder.jpg) no-repeat;
-  background-size: cover;
-  color: white;
+.Top View,
+.top-view {
+    background: url(../img/Placeholder.jpg) no-repeat;
+    background-size: cover;
+    color: white;
 }
- 
-.event-img{
-  width: 20%;
-  height: auto;
-    
+
+.event-img {
+    width: 20%;
+    height: auto;
 }
+
 .color-layer {
-  background-color: rgba(0, 0, 0, 0.3);
-  height: 100%;
-  width: 100%;
-  padding: 20px 20px 0 20px;
-  box-sizing: border-box;
-  position: relative;
+    background-color: rgba(0, 0, 0, 0.3);
+    height: 100%;
+    width: 100%;
+    padding: 20px 20px 0 20px;
+    box-sizing: border-box;
+    position: relative;
 }
-
-
 
 .profile-container {
-  width: 100px;
-  height: 100px;
-  bottom: 20px;
-  margin: 30px auto;
-  position: relative;
+    width: 100px;
+    height: 100px;
+    bottom: 20px;
+    margin: 30px auto;
+    position: relative;
 }
 
 .profile {
-  border-radius: 50%;
-  width: 40px;
-  height: auto;
+    border-radius: 50%;
+    width: 40px;
+    height: auto;
 }
-  
+
 .main {
     display: block;
     height: 100%;
     width: 100%;
     position: relative;
-
-  
 }
 
-
 .month-selection {
-  text-align: center;
-  position: absolute;
-  width: calc(100% - 40px);
-  bottom: 1px;
-  box-sizing: border-box;
+    text-align: center;
+    position: absolute;
+    width: calc(100% - 40px);
+    bottom: 1px;
+    box-sizing: border-box;
 }
 
 .prev {
-  float: left;
-  font-size: 25px;
-  color: white;
-  padding: 8px;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
-
-.next {
-    float: right;
-    font-size: 25px;
-    color: white; 
-    padding: 8px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    
-
-}
-span.month {
-    text-align: center;
-    color: white;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    font-size: 25px;
-  
-}
-
-
-
-
-.days-arrows{
-    padding-bottom: 23px;
-}
-
-a:hover{
-    background-color: black;
-}
-.prev-day{
     float: left;
-    margin-left: 10px;
-    font-size: 20px;
+    font-size: 25px;
     color: white;
-    background-color: rgba(0, 0, 0, 0.2);;
     padding: 8px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
 }
-.next-day{
+
+.next {
     float: right;
-    margin-right: 10px;
-    font-size: 20px;
+    font-size: 25px;
     color: white;
-    background-color: rgba(0, 0, 0, 0.2);;
     padding: 8px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-
 }
 
+span.month {
+    text-align: center;
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-size: 25px;
+}
 
-#active{
+.days-arrows {
+    padding-bottom: 23px;
+}
+
+a:hover {
+    background-color: black;
+}
+
+.prev-day {
+    float: left;
+    margin-left: 10px;
+    font-size: 20px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.2);
+    ;
+    padding: 8px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.next-day {
+    float: right;
+    margin-right: 10px;
+    font-size: 20px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.2);
+    ;
+    padding: 8px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+#active {
     background-color: rgba(0, 0, 0, 0.2);
     padding-top: 12px;
     border-radius: 50px;
-    
 }
 
-.day:hover{
+.day:hover {
     background-color: rgba(0, 0, 0, 0.2);
     padding-top: 12px;
     border-radius: 50px;
 }
-.day-name:hover{
-      background-color: rgba(0, 0, 0, 0.2);
+
+.day-name:hover {
+    background-color: rgba(0, 0, 0, 0.2);
     padding-top: 12px;
     border-radius: 50px;
 }
-.week-container{
-      padding-top: 1px;
-      padding-bottom: 1px;
-      background-color: #42a3e6;
 
+.week-container {
+    padding-top: 1px;
+    padding-bottom: 1px;
+    background-color: #42a3e6;
 }
+
 .week {
-  color: white;
-  width: 90%;
-  margin-bottom: 2px;
+    color: white;
+    width: 90%;
+    margin-bottom: 2px;
 }
 
-li.day-name{
-  display: inline-block;
-  text-align: center;
-  width: 11.5%;
-  height: 0;
-  padding: 0 0 8%
+li.day-name {
+    display: inline-block;
+    text-align: center;
+    width: 11.5%;
+    height: 0;
+    padding: 0 0 8%
 }
+
 li.day {
-  display: inline-block;
-  text-align: center;
-  width: 11.5%;
-  height: 0;
-  padding: 0 0 8%;
-
+    display: inline-block;
+    text-align: center;
+    width: 11.5%;
+    height: 0;
+    padding: 0 0 8%;
 }
 
-.entry{
-  padding: 20px;
-  border-top: 1px solid grey;
+.entry {
+    padding: 20px;
+    border-top: 1px solid grey;
 }
-img{
+
+img {
     display: inline-block;
     margin-right: 15px;
-  
-  
 }
 
-.text{
-  display: inline-block;
-  
+.text {
+    display: inline-block;
 }
 
-
-.title{
-  color: gray;
-  font-size: 16px;
+.title {
+    color: gray;
+    font-size: 16px;
 }
 
-.title:hover{
+.title:hover {
     color: black;
 }
-.name{
+
+.name {
     font-weight: 500;
-  
 }
 
-.time{
-  color: grey;
-  font-weight: 300;
-  font-size: 14px;
-  display: block;
-  margin-top: 10px;
+.time {
+    color: grey;
+    font-weight: 300;
+    font-size: 14px;
+    display: block;
+    margin-top: 10px;
 }
